# portal

./: .git-branches.toml  .gitignore  .gitmodules  .releaserc.json  .semrelrc  CHANGELOG.md  Dockerfile  Dockerfile.debug  Dockerfile.include.debug  Dockerfile.include.end  Dockerfile.include.start  LICENSE  Makefile  README.md  build.sh  config.go  deps.sh  go.mod  go.sum  main.go  npm-shrinkwrap.json  package.json  pnpm-lock.yaml  portal.go  tus.go
.changeset/: rude-pens-admire.md  young-masks-pretend.md
account/: account.go  errors.go  jwt.go  totp.go  web.go
api/: account.go  api.go  casbin.go  registry.go  s5.go  sync.go
bao/: Cargo.toml  bao.go  buf.gen.yaml  build.rs  client.go  plugin.go
bao/proto/: bao.proto  grpc_stdio.proto
bao/rust/: Cargo.toml
bao/rust/src/: main.rs
bao/src/: lib.rs  main.rs
bao/src/grpc/: error.rs  grpc_stdio.rs  mod.rs
cid/: cid.go
cmd/: main.go  signal.go
config/: account.go  cache.go  cluster.go  config.go  core.go  cron.go  database.go  errors.go  etcd.go  etcd_provider.go  log.go  mail.go  manager.go  plugin.go  protocol.go  redis.go  s3.go  scope.go  sia.go  storage.go  sync.go  tus.go  update.go  uuid.go
controller/: account.go  auth.go  controller.go  files.go
core/: access.go  account_errors.go  api.go  auth.go  auth_jwt.go  config.go  constants.go  context.go  cron.go  dnslink.go  events.go  http.go  import.go  logger.go  mailer.go  meta.go  metadata.go  otp.go  password.go  pin.go  plugin.go  protocol.go  renter.go  request.go  service.go  signal.go  storage.go  sync.go  tus.go  upload.go  user.go  (+1 more)
(+233 files in other folders)
